centos7/ingress/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: harbor
  creationTimestamp: "2023-02-10T17:08:40Z"
  labels:
    app: harbor
    app.kubernetes.io/managed-by: Helm
    chart: harbor
    heritage: Helm
    release: harbor
  name: harbor-portal
  namespace: harbor
  resourceVersion: "161421"
  uid: 48a61386-4778-4435-a578-6ae1a12e1c28
spec:
  clusterIP: 10.99.114.90
  clusterIPs:
  - 10.99.114.90
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: harbor
    component: portal
    release: harbor
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
